--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: blanchedalmond;
   background-color: rgba(0, 0, 0, 0.856);
+  padding: 20px;
 }
 
 a {
@@ -52,15 +53,69 @@ input {
 .header {
   text-align: center;
   text-transform: uppercase;
-  text-shadow: 0cqmax;
   color: antiquewhite;
-  padding-bottom: 30px;
+  margin-right: 350px;
 }
 
 .span {
   color: rgba(247, 39, 229, 0.637);
 }
+.header-menu-container{
+  display: flex;
+ justify-content: end;
+  align-items: center;
+  padding-bottom: 30px;
+}
+.btn-menu-open, .btn-menu-close{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background-color: transparent;
+    height: 50px;
+      width: 50px;
+      padding: 0px;
+}
+svg{
+  padding: 0px;
+}
+.icon-menu-open, .icon-menu-close{
+  fill:#F6F6FE
+}
+/* mob-menu */
+.mob-menu{
+    width: 0px;
+    height: 0px;
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+      
+}
+.isVisibleMenu{
+  opacity: 1;
+    visibility: visible;
+    pointer-events: all;
 
+      width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        background-color: #2a2a2a;
+        padding: 40px 40px;
+}
+.nav-list{
+display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.link-nav{
+  font-family: inherit;
+  color: antiquewhite;
+}
 .picture-pac {
   display: flex;
   gap: 15px;
@@ -467,4 +522,43 @@ input:focus {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+/* todo list by JsonPlaceholder API */
+.todoCard{
+  display: flex;
+  gap: 20px;
+}
+/* movie API */
+.loadMoreHidden{
+  visibility: hidden;
+  pointer-events: none;
+  opacity: 0;
+}
+.loadMoreVisible{
+  visibility: visible;
+    pointer-events: all;
+    opacity: 1;
+}
+.movieList{
+  display: flex;
+ flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+.movieCard{
+  width: calc((100% - 4*24px)/4);
+  border: 1px solid #808080;
+    border-radius: 8px;
+  height: 700px;
+}
+.moviePoster{
+border-radius: 8px;
+}
+.movieInfo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 10px;
 }
