--- a/src/partials/basket.html
+++ b/src/partials/basket.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basket</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/basket-9modul.js" defer></script>
+    <script src="../js/basket-9modul.js" defer></script>
 </head>
 
 <body>
